[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/TractorBeam.gd" type="Script" id=1]
[ext_resource path="res://Assets/models/Player1.glb" type="PackedScene" id=2]
[ext_resource path="res://Assets/sounds/tractor-beam-sfx.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/sounds/sfx_movement_jump11.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/models/player_v2.gltf" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=18]
extents = Vector3( 0.179, 6, 2.917 )

[node name="TractorBeam" type="Area" groups=["TractorBeam"]]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0.4, 0 )
collision_layer = 4
collision_mask = 2
monitoring = false
script = ExtResource( 1 )

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00318713, -5.62005, 8.29697e-05 )
shape = SubResource( 18 )

[node name="StandInPlayerMesh_OLD" parent="." instance=ExtResource( 2 )]
visible = false

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
pitch_scale = 0.01

[node name="CaptureSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -7.0
pitch_scale = 0.46

[node name="StandInPlayerMesh" type="Spatial" parent="."]
transform = Transform( 0.096547, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, -0.25, 0 )
visible = false

[node name="TranslationTween" type="Tween" parent="StandInPlayerMesh"]

[node name="RotationTween" type="Tween" parent="StandInPlayerMesh"]

[node name="PlayerMeshV2" parent="StandInPlayerMesh" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0.761583, -4.93235, 0.427539 )

[connection signal="area_shape_entered" from="." to="." method="_on_TractorRay_area_shape_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
